[gd_scene load_steps=3 format=3 uid="uid://daucfhktmchbj"]

[ext_resource type="Script" path="res://scenes/ui/player/tool_bar/tool_bar.gd" id="1_j8oki"]
[ext_resource type="Texture2D" uid="uid://t3h6387b5whx" path="res://sprites/ui/tool-bar.png" id="1_saakt"]

[node name="Toolbar" type="ReferenceRect"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
script = ExtResource("1_j8oki")

[node name="Frame" type="Sprite2D" parent="."]
position = Vector2(246, -26)
scale = Vector2(5, 5)
texture = ExtResource("1_saakt")

[node name="Slot1" type="ReferenceRect" parent="Frame"]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.033
anchor_top = 0.153
anchor_right = 0.183
anchor_bottom = 0.845
offset_left = -39.036
offset_top = -3.06
offset_right = -52.836
offset_bottom = -16.9
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="Frame/Slot1"]
scale = Vector2(0.3, 0.3)

[node name="Slot2" type="ReferenceRect" parent="Frame"]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.228
anchor_top = 0.151
anchor_right = 0.38
anchor_bottom = 0.85
offset_left = -39.176
offset_top = -3.02
offset_right = -53.16
offset_bottom = -17.0
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="Frame/Slot2"]
scale = Vector2(0.3, 0.3)

[node name="Slot3" type="ReferenceRect" parent="Frame"]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.424
anchor_top = 0.15
anchor_right = 0.576
anchor_bottom = 0.85
offset_left = -39.008
offset_top = -3.0
offset_right = -52.992
offset_bottom = -17.0
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="Frame/Slot3"]
scale = Vector2(0.3, 0.3)

[node name="Slot4" type="ReferenceRect" parent="Frame"]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.62
anchor_top = 0.151
anchor_right = 0.772
anchor_bottom = 0.849
offset_left = -39.04
offset_top = -3.02
offset_right = -53.024
offset_bottom = -16.98
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="Frame/Slot4"]
scale = Vector2(0.3, 0.3)

[node name="Slot5" type="ReferenceRect" parent="Frame"]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.815
anchor_top = 0.15
anchor_right = 0.967
anchor_bottom = 0.85
offset_left = -38.78
offset_top = -3.0
offset_right = -52.764
offset_bottom = -17.0
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="Frame/Slot5"]
scale = Vector2(0.3, 0.3)
